crates/cli/tests/snapshots/setup__setup_stops_at_a_failed_required_step_plain.snap
---
source: crates/cli/tests/setup.rs
expression: plain.stdout
---
PV setup
Ensured PV state layout: <tempdir>/home/.pv
Privileged helper: current 2.0.0 (protocol 2)
Shell profile integration skipped by --no-path.
Run `pv env --shell zsh`, `pv env --shell bash`, or `pv env --shell fish` for manual shell integration.
Prepared PV DNS resolver config
  path: <tempdir>/home/.pv/config/resolver/test
  DNS resolver port: <dns-port>
System resolver config is not PV-owned: <tempdir>/etc/resolver/test
  Leaving it in place.
PV stopped during DNS resolver setup.
