crates/cli/tests/snapshots/setup__setup_stops_at_a_failed_required_step_stderr.snap
---
source: crates/cli/tests/setup.rs
expression: "format!(\"plain:\\n{}decorated:\\n{}\", plain.stderr, decorated.stderr)"
---
plain:
decorated:
