crates/cli/tests/snapshots/setup__uninstall_holds_exclusive_admission_through_prune_and_releases_on_return.snap
---
source: crates/cli/tests/setup.rs
expression: refused
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: PV self-update/daemon mutation coordination is active; the OS lock is held on <tempdir>/home/.pv-runtime-lifecycle.lock\n",
}
