crates/cli/tests/snapshots/setup__uninstall_on_a_terminal.snap
---
source: crates/cli/tests/setup.rs
expression: uninstall.stdout
---
[pv] uninstall

┌  PV uninstall  ·  macOS integration
│
✓  daemon removal
│  ✓ PV stopped · automatic startup disabled
│  ✓ LaunchAgent removed: <tempdir>/Library/LaunchAgents/com.prvious.pv.daemon.plist
│
✓  DNS resolver removal
│  ✓ Deleted prepared DNS resolver config: <tempdir>/home/.pv/config/resolver/test
│  ✓ .test domain routing removed
│    <tempdir>/etc/resolver/test
│
✓  port redirect removal
│  ✓ Deleted prepared pf anchor: <tempdir>/home/.pv/config/pf/com.prvious.pv
│  ✓ Deleted prepared pf.conf reference: <tempdir>/home/.pv/config/pf/pf.conf
│  ✓ Local HTTP and HTTPS redirects removed
│
✓  CA trust removal
│  ✓ Prepared PV local CA trust removal
│  ✓ Removed trust for PV’s local HTTPS certificate
│
◇  privileged helper removal
│  ✓ Privileged helper removed
│
◇  Backed up shell profile: <tempdir>/home/.zprofile.<timestamp>.pv.bak
│
◇  Removed shell profile integration: <tempdir>/home/.zprofile
│
✓  PV state removal
│  ✓ Removed PV app binaries and shims: <tempdir>/home/.pv/bin
│  ✓ Removed runtime metadata: <tempdir>/home/.pv/run
│  ✓ Removed generated configs: <tempdir>/home/.pv/config
│  ✓ Removed download cache: <tempdir>/home/.pv/downloads
│  ○ Preserved logs, pv.db, certificates, Composer home/cache, and resources data.
│
└  PV uninstall complete
