crates/cli/tests/snapshots/setup__uninstall_on_a_terminal_stderr.snap
---
source: crates/cli/tests/setup.rs
expression: uninstall.stderr
---
│
◆  Removing privileged helper
