crates/cli/tests/snapshots/setup__uninstall_prune_requires_confirmation_without_force.snap
---
source: crates/cli/tests/setup.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: Refusing to prune PV state without an interactive confirmation.\n  Rerun with `pv uninstall --prune --force` to remove ~/.pv non-interactively.\n",
}
